--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,11 +98,13 @@ jobs:
         fail_ci_if_error: false
     
     - name: Upload coverage reports
+      if: success() || failure()
       uses: actions/upload-artifact@v4
       with:
         name: backend-coverage-report
         path: backend/htmlcov/
         retention-days: 30
+        if-no-files-found: ignore
 
   e2e-tests:
     name: E2E Tests
@@ -159,7 +161,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
     
@@ -227,6 +229,7 @@ jobs:
     
     - name: Download coverage artifacts
       uses: actions/download-artifact@v4
+      continue-on-error: true
       with:
         name: backend-coverage-report
         path: coverage-report
