--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     ports:
       - "8004:8004"
     environment:
+      - DEBUG=true
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/tasktracker
       - REDIS_URL=redis://redis:6379/0
       - S3_ENDPOINT_URL=http://minio:9000
@@ -55,6 +56,7 @@ services:
     volumes:
       - ./backend:/app/backend
     environment:
+      - DEBUG=true
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/tasktracker
       - REDIS_URL=redis://redis:6379/0
       - S3_ENDPOINT_URL=http://minio:9000
